==> archlizix/rt-thread/bsp/gd32f103-cl-g15c01c/drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define __GD32_PORT_MAX 7u
#define __GD32_PORT_MAX 6u
#define __GD32_PORT_MAX 5u
#define __GD32_PORT_MAX 4u
#define __GD32_PORT_MAX 3u
#define __GD32_PORT_MAX 2u
#define __GD32_PORT_MAX 1u
#define __GD32_PORT_MAX 0u
#define PIN_GDPORT_MAX __GD32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void gd32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    uint32_t gpio_port;
    uint32_t gpio_pin;

    if (PIN_PORT(pin) < PIN_GDPORT_MAX)
    {
        gpio_port = PIN_GDPORT(pin);
        gpio_pin = PIN_GDPIN(pin);

        gpio_bit_write(gpio_port, gpio_pin, (bit_status)value);
    }
}

static int gd32_pin_read(rt_device_t dev, rt_base_t pin)
{
    uint32_t gpio_port;
    uint32_t gpio_pin;
    int value = RESET;

    if (PIN_PORT(pin) < PIN_GDPORT_MAX)
    {
        gpio_port = PIN_GDPORT(pin);
        gpio_pin = PIN_GDPIN(pin);
        value = gpio_input_bit_get(gpio_port, gpio_pin);
    }

    return value;
}

static void gd32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    if (PIN_PORT(pin) >= PIN_GDPORT_MAX)
    {
		return;
    }

    uint32_t gpio_port = PIN_GDPORT(pin);
    uint32_t gpio_pin = PIN_GDPIN(pin);

	uint32_t mode_gd;
    switch (mode)
    {
        case PIN_MODE_OUTPUT:
            mode_gd = GPIO_MODE_OUT_PP;
            break;
        case PIN_MODE_INPUT:
            mode_gd = GPIO_MODE_IN_FLOATING;
            break;
        case PIN_MODE_INPUT_PULLUP:
            mode_gd = GPIO_MODE_IPD;
            break;
        case PIN_MODE_INPUT_PULLDOWN:
            mode_gd = GPIO_MODE_IPU;
            break;
        case PIN_MODE_OUTPUT_OD:
            mode_gd = GPIO_MODE_OUT_OD;
            break;
        default:
            mode_gd = GPIO_MODE_IN_FLOATING;
            break;
    }

    gpio_init(gpio_port, mode_gd, GPIO_OSPEED_2MHZ, gpio_pin);
}

static rt_err_t gd32_pin_attach_irq(struct rt_device *device, rt_int32_t pin,
                                     rt_uint32_t mode, void (*hdr)(void *args), void *args)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_GDPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    irqindex = bit2bitno(PIN_GDPIN(pin));
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
    {
        return RT_ENOSYS;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == pin &&
        pin_irq_hdr_tab[irqindex].hdr == hdr &&
        pin_irq_hdr_tab[irqindex].mode == mode &&
        pin_irq_hdr_tab[irqindex].args == args)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    if (pin_irq_hdr_tab[irqindex].pin != -1)
    {
        rt_hw_interrupt_enable(level);
        return RT_EBUSY;
    }
    pin_irq_hdr_tab[irqindex].pin = pin;
    pin_irq_hdr_tab[irqindex].hdr = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t gd32_pin_dettach_irq(struct rt_device *device, rt_int32_t pin)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_GDPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    irqindex = bit2bitno(PIN_GDPIN(pin));
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
    {
        return RT_ENOSYS;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == -1)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    pin_irq_hdr_tab[irqindex].pin = -1;
    pin_irq_hdr_tab[irqindex].hdr = RT_NULL;
    pin_irq_hdr_tab[irqindex].mode = 0;
    pin_irq_hdr_tab[irqindex].args = RT_NULL;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t gd32_pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                     rt_uint32_t enabled)
{
    const struct pin_irq_map *irqmap;
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_GDPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    uint32_t exti_line = PIN_GDPIN(pin);
    uint32_t exti_mode = EXTI_INTERRUPT;
    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(exti_line);
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return -RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();
        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return -RT_ENOSYS;
        }

        irqmap = &pin_irq_map[irqindex];

		uint32_t exti_trig;
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            exti_trig = EXTI_TRIG_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            exti_trig = EXTI_TRIG_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            exti_trig = EXTI_TRIG_BOTH;
            break;
        default:
            break;
        }

		/* enable the AF clock */
		rcu_periph_clock_enable(RCU_AF);

	    /* enable and set interrupt priority */
		nvic_priority_group_set(NVIC_PRIGROUP_PRE4_SUB0);
        nvic_irq_enable(irqmap->irqno, 5U, 0U);

		/* connect key EXTI line to key GPIO pin */
		gpio_exti_source_select(PIN_PORT(pin), PIN_NO(pin));

        /* configure EXTI line */
		exti_init((exti_line_enum)(exti_line), (exti_mode_enum)exti_mode, (exti_trig_type_enum)exti_trig);
		exti_interrupt_flag_clear((exti_line_enum)(exti_line));

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
		irqmap = get_pin_irq_map(exti_line);
        if (irqmap == RT_NULL)
        {
            return -RT_EINVAL;
        }
        nvic_irq_disable(irqmap->irqno);
    }
    else
    {
        return -RT_ENOSYS;
    }

    return RT_EOK;
}

int rt_hw_pin_init(void)
{
#if defined(GPIOG)
    rcu_periph_clock_enable(RCU_GPIOG);
#endif
#if defined(GPIOF)
    rcu_periph_clock_enable(RCU_GPIOF);
#endif
#if defined(GPIOE)
    rcu_periph_clock_enable(RCU_GPIOE);
#endif
#if defined(GPIOD)
    rcu_periph_clock_enable(RCU_GPIOD);
#endif
#if defined(GPIOC)
    rcu_periph_clock_enable(RCU_GPIOC);
#endif
#if defined(GPIOB)
    rcu_periph_clock_enable(RCU_GPIOB);
#endif
#if defined(GPIOA)
    rcu_periph_clock_enable(RCU_GPIOA);
#endif
    rcu_periph_clock_enable(RCU_AF);
    return rt_device_pin_register("pin", &_gd32_pin_ops, RT_NULL);
}
